Add bullk users from a csv document